# modern-3d-engine

./: CMakeLists.txt
assets/shaders/: lit.frag  lit.vert
examples/: DemoScene.cpp  DemoScene.hpp  FPSDemo.cpp  FPSDemo.hpp  PhysicsDemo.cpp  SculptingDemo.cpp  SculptingDemo.hpp
src/: main.cpp
src/components/: Camera.cpp  Camera.hpp  Component.hpp  Light.cpp  Light.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Transform.cpp  Transform.hpp
src/core/: Input.cpp  Input.hpp  ModelLoader.cpp  ModelLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  Window.cpp  Window.hpp
src/effects/: VisualEffects.cpp  VisualEffects.hpp
src/gameplay/: AIController.cpp  FPSController.cpp  FPSController.hpp  HealthSystem.cpp  HealthSystem.hpp  WeaponSystem.cpp  WeaponSystem.hpp
src/physics/: CapsuleCollider.cpp  CapsuleCollider.hpp  Collider.cpp  Collider.hpp  ConvexHullCollider.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBody.cpp  RigidBody.hpp
src/renderer/: LightManager.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
src/scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/sculpting/: MeshIO.cpp  MeshIO.hpp  SculptMesh.cpp  SculptMesh.hpp  SculptingSystem.cpp  SculptingTool.cpp  SculptingTool.hpp  TexturePainter.cpp  UndoSystem.cpp  UndoSystem.hpp
src/ui/: GameHUD.cpp  GameHUD.hpp  PaintingUI.cpp  PaintingUI.hpp  SculptingUI.cpp  SculptingUI.hpp  UISystem.cpp  UISystem.hpp
